Update Materialize to version 2.2.1 and fix code to comply to 2.2.1 API

--- a/index.html
+++ b/index.html
@@ -2,31 +2,32 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Professidero - Portfolio</title>
 
   <!-- CSS  -->
+  <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Compiled and minified CSS -->
-  <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.css" rel="stylesheet" media="screen,projection">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@materializecss/materialize@2.2.1/dist/css/materialize.min.css">
   <link href="css/welcome.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/sidenav.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/collapsible_project.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-
 </head>
 <body class="blue-grey darken-4">
 
-  <!-- <?php include 'sidenav.html'; ?>--><div id="sidenav"></div>
-  <!-- <?php include 'welcome.html'; ?>--><div id="welcome"></div>
+<div id="sidenav" w3-include-html="sidenav.html"></div>
+<div id="welcome" w3-include-html="welcome.html"></div>
 
 <div class="container">
   <h1 class="center-align red-text text-lighten-2" id="2018">2018</h1>
   <div class="row">
     <div class="col s12 m6 l6">
-        <!-- <?php include 'projects/spacelink.html'; ?>--><div id="spacelink"></div>
+      <div id="spacelink" w3-include-html="projects/spacelink.html"></div>
     </div>
     <div class="col s12 m6 l6">
-        <!-- <?php include 'projects/wellsimulator.html'; ?>--><div id="wellsimulator"></div>
+      <div id="wellsimulator" w3-include-html="projects/wellsimulator.html"></div>
     </div>
   </div>
 
@@ -34,10 +35,10 @@
   <h1 class="center-align red-text text-lighten-2" id="2017">2017</h1>
   <div class="row">
     <div class="col s12 m6">
-        <!-- <?php include 'projects/pacmangdx.html'; ?>--><div id="pacmangdx"></div>
+      <div id="pacmangdx" w3-include-html="projects/pacmangdx.html"></div>
     </div>
     <div class="col s12 m6">
-        <!-- <?php include 'projects/travellingsalesman.html'; ?>--><div id="travellingsalesman"></div>
+      <div id="travellingsalesman" w3-include-html="projects/travellingsalesman.html"></div>
     </div>
   </div>
 
@@ -45,74 +46,41 @@
   <h1 class="center-align red-text text-lighten-2" id="2016">2016</h1>
   <div class="row">
     <div class="col s12 m6">
-        <!-- <?php include 'projects/cpooa.html'; ?>--><div id="cpooa"></div>
+      <div id="cpooa" w3-include-html="projects/cpooa.html"></div>
     </div>
     <div class="col s12 m6">
-        <!-- <?php include 'projects/petitsnains.html'; ?>--><div id="petitsnains"></div>
+      <div id="petitsnains" w3-include-html="projects/petitsnains.html"></div>
     </div>
   </div>
 
   <h1 class="center-align red-text text-lighten-2" id="2015">2015</h1>
   <div class="row">
     <div class="col s12">
-        <!-- <?php include 'projects/streamlauncher.html'; ?>--><div id="streamlauncher"></div>
+      <div id="streamlauncher" w3-include-html="projects/streamlauncher.html"></div>
     </div>
   </div>
 
   <h1 class="center-align red-text text-lighten-2" id="2013">2013</h1>
   <div class="row">
     <div class="col s12">
-        <!-- <?php include 'projects/demonio.html'; ?>--><div id="demonio"></div>
+      <div id="demonio" w3-include-html="projects/demonio.html"></div>
     </div>
   </div>
 </div>
 
 
-
-<!--
-<footer class="page-footer red lighten-1" id="contact">
-  <div class="container">
-    <div class="row">
-      <div class="col l6 s12">
-        <h5 class="white-text">Company Bio</h5>
-        <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
-      </div>
-      <div class="col l3 s12">
-        <h5 class="white-text">Settings</h5>
-        <ul>
-          <li><a class="white-text" href="mailto:professidero@gmail.com">professidero@gmail.com</a></li>
-          <li><a class="white-text" href="#!">LinkedIn</a></li>
-          <li><a class="white-text" href="#!">Link 3</a></li>
-          <li><a class="white-text" href="#!">Link 4</a></li>
-        </ul>
-      </div>
-      <div class="col l3 s12">
-        <h5 class="white-text">Connect</h5>
-        <ul>
-          <li><a class="white-text" href="#!">Link 1</a></li>
-          <li><a class="white-text" href="#!">Link 2</a></li>
-          <li><a class="white-text" href="#!">Link 3</a></li>
-          <li><a class="white-text" href="#!">Link 4</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="footer-copyright">
-    <div class="container">
-      Made with <a class="blue-grey-text text-darken-2" href="http://materializecss.com">Materialize</a>
-    </div>
-  </div>
-</footer>-->
-
-
 <!--  Scripts-->
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="js/welcome.js"></script>
-<script src="js/insert_projects.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.js"></script>
-<script src="js/sidenav.js"></script>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/@materializecss/materialize@2.2.1/dist/js/materialize.min.js"></script>
+<!-- Dependencies to include HTML files -->
+<script src="http://www.w3schools.com/lib/w3data.js"></script>
+<script src="js/include_elements.js"></script>
+<script>
+window.onload = initializeMaterializeComponentsAfterLoading;
+</script>
+
 
 </body>
 </html>
