--- a/sidenav.html
+++ b/sidenav.html
@@ -1,31 +1,24 @@
-<a data-activates="slide-out" class="fixed-action-btn btn-floating btn-large button-collapse red lighten-2 waves-effect waves-light">
+<a href="#" data-target="slide-out" class="sidenav-trigger fixed-action-btn btn-floating btn-large button-collapse red lighten-2 waves-effect waves-light">
   <i class="large material-icons blue-grey-text text-lighten-5">menu</i>
 </a>
-
-<div class="container">
-  <ul id="slide-out" class="side-nav blue-grey darken-4">
-    <li>
-      <a class="waves-effect waves-light red-text text-lighten-2" href="#welcome">Welcome</a>
-    </li>
-    <div class="divider red lighten-2"></div>
-    <li>
-      <a class="waves-effect waves-light red-text text-lighten-2" href="#2018">2018</a>
-    </li>
-    <li>
-      <a class="waves-effect waves-light red-text text-lighten-2" href="#2017">2017</a>
-    </li>
-    <li>
-      <a class="waves-effect waves-light red-text text-lighten-2" href="#2016">2016</a>
-    </li>
-    <li>
-      <a class="waves-effect waves-light red-text text-lighten-2" href="#2015">2015</a>
-    </li>
-    <li>
-      <a class="waves-effect waves-light red-text text-lighten-2" href="#2013">2013</a>
-    </li>
-    <!--<div class="divider red lighten-1"></div>
-    <li>
-      <a class="waves-effect waves-light red-text text-lighten-1" href="#contact">Contact</a>
-    </li>-->
-  </ul>
-</div>
+<ul id="slide-out" class="sidenav blue-grey darken-4">
+  <li>
+    <a class="waves-effect waves-light red-text text-lighten-2" href="#welcome">Welcome</a>
+  </li>
+  <div class="divider red lighten-2"></div>
+  <li>
+    <a class="waves-effect waves-light red-text text-lighten-2" href="#2018">2018</a>
+  </li>
+  <li>
+    <a class="waves-effect waves-light red-text text-lighten-2" href="#2017">2017</a>
+  </li>
+  <li>
+    <a class="waves-effect waves-light red-text text-lighten-2" href="#2016">2016</a>
+  </li>
+  <li>
+    <a class="waves-effect waves-light red-text text-lighten-2" href="#2015">2015</a>
+  </li>
+  <li>
+    <a class="waves-effect waves-light red-text text-lighten-2" href="#2013">2013</a>
+  </li>
+</ul>
