Fix unloaded scripts by loading them through HTTPS

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/@materializecss/materialize@2.2.1/dist/js/materialize.min.js"></script>
 <!-- Dependencies to include HTML files -->
-<script src="http://www.w3schools.com/lib/w3data.js"></script>
+<script src="https://www.w3schools.com/lib/w3data.js"></script>
 <script src="js/include_elements.js"></script>
 <script>
 window.onload = initializeMaterializeComponentsAfterLoading;
